Set up generating of NuGet package on build

--- a/NexusHTTPServer/NexusHttpServer.csproj
+++ b/NexusHTTPServer/NexusHttpServer.csproj
@@ -6,6 +6,7 @@
     <PackageId>NexusHttpServer</PackageId>
     <Title>Nexus HTTP Server</Title>
     <Authors>TheNexusAvenger</Authors>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
