--- a/NexusHTTPServer/NexusHttpServer.csproj
+++ b/NexusHTTPServer/NexusHttpServer.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="WebSocketSharp.Standard" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
